# SATELLITE

./: installation.md  pyproject.toml  todo
config/: config.yaml
satellite/satellite/: TeNe_2D_script.py  TeNe_angles_script.py  TeNe_radial_script.py  TeNe_specific_slits_script.py  analysis2D_script.py  calculations_excluding_outliers_script.py  define_Te_Ne_for_null_spaxels_script.py  diagnotic_diagrams_script.py  diagnotic_diagrams_script.pyold  element_abundances_ICFs_2D_script.py  element_abundances_ICFs_angles_script.py  element_abundances_ICFs_radial_script.py  element_abundances_ICFs_specific_slits_script.py  exclude_probematic_errors_script.py  find_maxvlaue_script.py  flux_angles_norm_definition_script.py  fluxes.py  generate_2D_lineratio_maps_script.py  histogram_script.py  ionicabundances_2D_script.py  ionicabundances_angles_script.py  ionicabundances_radial_script.py  ionicabundances_specific_slits_script.py  line_ratio_script.py  mean_value_script.py  my_analysis2D_script.py  norm_flux_error_script.py  physical_parameters_script.py  positive_values_script.py  print_results_script.py  radial_analysis_script.py  radial_line_flux_script.py  read_input_lines_parameters_script.py  read_input_script.py  rotate_line_fluxes_script.py  save_FITSimages_script.py  slit_line_flux_script.py  specificPA_line_fluxes_script.py  specific_line_analysis_script.py  specific_slit_read_parameters.py  (+3 more)
satellite/test/: outputs.txt  satellite_v1.3.py
src/satellite/: abundance.py  astroflux.py  cfgio.py  fitsutils.py  (+8 more)
tests/: test_centering_matrix.py  test_get_vertical_slit.py
